--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
-    "mssql": "^2.3.1"
+    "mssql": "^2.3.1",
+    "squel": "^5.11.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
